--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -12,6 +12,7 @@
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
+
 }
 
 #wrapper.toggled {
@@ -73,7 +74,9 @@
 .sidebar-nav li a:hover {
     text-decoration: none;
     color: #fff;
-    background: rgba(255,255,255,0.2);
+    background-color:#045FB4;
+    /*background: rgba(255,255,255,0.2);*/
+
 }
 
 .sidebar-nav li a:active,
@@ -85,15 +88,25 @@
     height: 65px;
     font-size: 18px;
     line-height: 60px;
+   
+    background: rgba(255,255,255,0.2);
+   
+
 }
 
 .sidebar-nav > .sidebar-brand a {
     color: #999999;
+
 }
 
 .sidebar-nav > .sidebar-brand a:hover {
     color: #fff;
     background: none;
+}
+
+.sidebar-nav-bottom{
+    position: absolute; 
+    bottom: 45;
 }
 
 @media(min-width:768px) {
