--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -4,6 +4,10 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 
+ body {
+    overflow-x: hidden;
+ }
+
 /* Toggle Styles */
 
 #wrapper {
