update css for page-content-wrapper

--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -47,6 +47,15 @@
     padding: 15px;
 }
 
+#page-content-wrapper a{
+    color: black;
+}
+
+#page-content-wrapper a:hover{
+    color: black;
+    text-decoration: none;
+}
+
 #wrapper.toggled #page-content-wrapper {
     position: absolute;
     margin-right: -250px;
