--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -21,39 +21,40 @@ html(lang='en')
         #wrapper.d-flex
 
             // Sidebar
-            #sidebar-wrapper.bg-light.border-right
-                .sidebar-heading Start Bootstrap 
+            #sidebar-wrapper.border-end.bg-white
+                .sidebar-heading.border-bottom.bg-light Start Bootstrap 
                 .list-group.list-group-flush
-                    a.list-group-item.list-group-item-action.bg-light(href='#!') Dashboard
-                    a.list-group-item.list-group-item-action.bg-light(href='#!') Shortcuts
-                    a.list-group-item.list-group-item-action.bg-light(href='#!') Overview
-                    a.list-group-item.list-group-item-action.bg-light(href='#!') Events
-                    a.list-group-item.list-group-item-action.bg-light(href='#!') Profile
-                    a.list-group-item.list-group-item-action.bg-light(href='#!') Status
+                    a.list-group-item.list-group-item-action.list-group-item-light.p-3(href='#!') Dashboard
+                    a.list-group-item.list-group-item-action.list-group-item-light.p-3(href='#!') Shortcuts
+                    a.list-group-item.list-group-item-action.list-group-item-light.p-3(href='#!') Overview
+                    a.list-group-item.list-group-item-action.list-group-item-light.p-3(href='#!') Events
+                    a.list-group-item.list-group-item-action.list-group-item-light.p-3(href='#!') Profile
+                    a.list-group-item.list-group-item-action.list-group-item-light.p-3(href='#!') Status
 
-            // Page Content
+            // Page content wrapper
             #page-content-wrapper
-                nav.navbar.navbar-expand-lg.navbar-light.bg-light.border-bottom
-                    button#menu-toggle.btn.btn-primary Toggle Menu
-                    button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
-                        span.navbar-toggler-icon
-                    #navbarSupportedContent.collapse.navbar-collapse
-                        ul.navbar-nav.ml-auto.mt-2.mt-lg-0
-                            li.nav-item.active
-                                a.nav-link(href='#!')
-                                    | Home 
-                                    span.sr-only (current)
-                            li.nav-item
-                                a.nav-link(href='#!') Link
-                            li.nav-item.dropdown
-                                a#navbarDropdown.nav-link.dropdown-toggle(href='#!', role='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
-                                    | Dropdown
-                                .dropdown-menu.dropdown-menu-right(aria-labelledby='navbarDropdown')
-                                    a.dropdown-item(href='#!') Action
-                                    a.dropdown-item(href='#!') Another action
-                                    .dropdown-divider
-                                    a.dropdown-item(href='#!') Something else here
 
+                // Top navigation
+                nav.navbar.navbar-expand-lg.navbar-light.bg-light.border-bottom
+                    .container-fluid
+                        button#sidebarToggle.btn.btn-primary Toggle Menu
+                        button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
+                            span.navbar-toggler-icon
+                        #navbarSupportedContent.collapse.navbar-collapse
+                            ul.navbar-nav.ms-auto.mt-2.mt-lg-0
+                                li.nav-item.active
+                                    a.nav-link(href='#!') Home 
+                                li.nav-item
+                                    a.nav-link(href='#!') Link
+                                li.nav-item.dropdown
+                                    a#navbarDropdown.nav-link.dropdown-toggle(href='#', role='button', data-bs-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
+                                        | Dropdown
+                                    .dropdown-menu.dropdown-menu-end(aria-labelledby='navbarDropdown')
+                                        a.dropdown-item(href='#!') Action
+                                        a.dropdown-item(href='#!') Another action
+                                        .dropdown-divider
+                                        a.dropdown-item(href='#!') Something else here
+                // Page content
                 .container-fluid
                     h1.mt-4 Simple Sidebar
                     p
@@ -62,12 +63,11 @@ html(lang='en')
                         | Make sure to keep all page content within the 
                         code #page-content-wrapper
                         | . The top navbar is optional, and just for demonstration. Just create an element with the 
-                        code #menu-toggle
+                        code #sidebarToggle
                         |  ID which will toggle the menu when clicked.
 
         // Bootstrap core JS
-        script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js')
-        script(src='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js')
+        script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js')
 
         // Core theme JS
         script(src='js/scripts.js')
